[metadata]
name = nionutils
version = 0.3.20
author = Nion Software
author_email = swift@nion.com
description = Nion utility classes.
long_description = file: README.rst, CHANGES.rst, LICENSE.rst
url = https://github.com/nion-software/nionutils
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6

[options]
packages = nion.utils, nion.utils.test
namespace_packages = nion
